样式调整，但是登录页面样式还是不太好看

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -11,9 +11,11 @@
 		<title>Dashboard Template for Bootstrap</title>
 		<!-- Bootstrap core CSS -->
 		<!--<link href="asserts/css/bootstrap.min.css" rel="stylesheet">-->
-		<link th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap.min.css}">
+		<!-- Bootstrap core CSS -->
+		<link href="asserts/css/bootstrap.min.css" th:href="@{/webjars/bootstrap/4.2.1/css/bootstrap.css}" rel="stylesheet">
+
 		<!-- Custom styles for this template -->
-		<link th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
+		<link href="asserts/css/dashboard.css" th:href="@{/asserts/css/dashboard.css}" rel="stylesheet">
 		<style type="text/css">
 			/* Chart.js */
 			
